<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:layout_gravity="center"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/profile_text"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/nama_autor"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/text_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/email_authot"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/profile_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/profile_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_text" />

    <Button
        android:id="@+id/buttonl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:paddingHorizontal="70dp"
        android:text="@string/logout"
        android:textSize="16sp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:scrollIndicators="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>